// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  OnMouseLeave={[Function]}
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
>
  Facebook
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  OnMouseLeave={[Function]}
  className="hovered"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
>
  Facebook
</a>
`;
